# boltffi

./: .gitignore  BOLTFFI_TOML_SPEC.md  Cargo.toml  LICENSE  README.md  justfile  renovate.json5
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
benchmarks/: README.md  publish-benchmark-runs.sh
benchmarks/android-app/: build-android.sh
benchmarks/java-jvm-bench/: build.gradle.kts  run-jmh.sh
benchmarks/kotlin-jvm-bench/: build-jni.sh  build.gradle.kts  run-jmh.sh
benchmarks/rust-boltffi/: build-java.sh  build-kotlin.sh  build.sh
benchmarks/rust-uniffi/: build-java.sh  build-kotlin.sh  build-xcframework.sh
benchmarks/rust-wasm-bindgen/: Cargo.toml
benchmarks/rust-wasm-bindgen/src/: lib.rs
benchmarks/scripts/: audit_benchmark_catalog.py  benchmark_catalog.py  benchmarkjs_to_run.py  jmh_to_benchmark_run.py
benchmarks/swift-macos-bench/: Package.swift  run-bench.sh
benchmarks/wasm-bench/: bench.mjs  run-bench.sh
boltffi/: Cargo.toml
boltffi_bindgen/: Cargo.toml  askama.toml
boltffi_bindgen/src/: lib.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: build.rs  config.rs  main.rs  target.rs
boltffi_core/: Cargo.toml
boltffi_core/src/: callback.rs  handle.rs  lib.rs  rustfuture.rs  wasm.rs
boltffi_core/tests/: wire_records.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: callback_trait.rs  class.rs  custom_type.rs  custom_types.rs  data_types.rs  export.rs  lib.rs  method_common.rs  params.rs  returns.rs  util.rs
boltffi_tests/: Cargo.toml
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: async_cancellation.rs  class_ffi.rs  error_propagation.rs
boltffi_verify/: Cargo.toml
docs/: astro.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/public/: llms.txt  robots.txt
docs/src/: content.config.ts
examples/demo/: Cargo.toml  boltffi.benchmark.toml
examples/demo/src/: lib.rs
examples/demo/src/async_fns/: mod.rs
examples/demo/src/bytes/: mod.rs
examples/demo/src/callbacks/: sync_traits.rs
examples/demo/src/classes/: methods.rs  thread_safe.rs
examples/demo/src/enums/: c_style.rs  data_enum.rs
examples/demo/src/options/: complex.rs  primitives.rs
examples/demo/src/primitives/: maps.rs  scalars.rs  strings.rs  vecs.rs
examples/demo/src/records/: blittable.rs  with_collections.rs
examples/wasm-demo/: Cargo.toml  test.mjs  (+1 more)
mobiFFI_bindgen/: Cargo.toml
mobiFFI_cli/: Cargo.toml
mobiFFI_core/: Cargo.toml  build.rs
riff/: Cargo.toml
riff/src/: lib.rs
riff/tests/: facade_smoke.rs
riff_bindgen/: Cargo.toml
riff_cli/: Cargo.toml
riff_cli/src/: config.rs
riff_cli/src/commands/: generate.rs  init.rs  pack.rs
riff_core/: Cargo.toml
riff_core/src/: lib.rs  subscription.rs
riff_core/src/types/: option.rs
riff_core/src/wire/: buffer.rs  constants.rs  decode.rs  encode.rs
riff_core/tests/: wire_records.rs
riff_verify/: Cargo.toml
swift_test/: Generated.swift  mobiFFI_core.h  run.sh  test.swift
(+408 files in other folders)
