[package]
name = "riff_cli"
version = "0.1.0"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]

[[bin]]
name = "riff"
path = "src/main.rs"

[dependencies]
riff_bindgen = { path = "../riff_bindgen" }
riff_verify = { path = "../riff_verify" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
thiserror = "2.0"
which = "8.0"
sha2 = "0.10"
hex = "0.4"
zip = "7.2"
walkdir = "2.4"

[lints]
workspace = true
