[package]
name = "riff_core"
version = "0.1.0"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
fast-alloc = ["mimalloc"]

[dependencies]
riff_macros = { path = "../riff_macros" }
mimalloc = { version = "0.1", default-features = false, optional = true }

[lints]
workspace = true
