[package]
name = "bench_wasm_bindgen"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
demo = { path = "../../examples/demo" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.48"

[profile.release]
opt-level = 3
lto = true
