[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[features]
default = []
uniffi = ["dep:uniffi"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
boltffi = { path = "../../boltffi", features = ["chrono"] }
boltffi_core = { path = "../../boltffi_core", features = ["chrono"] }
chrono = "0.4"
uniffi = { version = "0.31", optional = true }
uuid = "1"
url = "2"
